Replace node feature with a capability.