@@ -9,6 +9,10 @@
 
 package org.elasticsearch.rest.action.search;
 
+import org.elasticsearch.Build;
+import org.elasticsearch.common.util.set.Sets;
+
+import java.util.Collections;
 import java.util.Set;
 
 /**
@@ -22,9 +26,24 @@ public final class SearchCapabilities {
     private static final String RANGE_REGEX_INTERVAL_QUERY_CAPABILITY = "range_regexp_interval_queries";
     /** Support synthetic source with `bit` type in `dense_vector` field when `index` is set to `false`. */
     private static final String BIT_DENSE_VECTOR_SYNTHETIC_SOURCE_CAPABILITY = "bit_dense_vector_synthetic_source";
+    /** Support regex and range match rules in interval queries. */
+    private static final String KQL_QUERY_SUPPORTED = "kql_query";
+    public static final Set<String> CAPABILITIES = capabilities();
 
-    public static final Set<String> CAPABILITIES = Set.of(
-        RANGE_REGEX_INTERVAL_QUERY_CAPABILITY,
-        BIT_DENSE_VECTOR_SYNTHETIC_SOURCE_CAPABILITY
-    );
+    private static Set<String> capabilities() {
+        Set<String> capabilities = Set.of(
+            RANGE_REGEX_INTERVAL_QUERY_CAPABILITY,
+            BIT_DENSE_VECTOR_SYNTHETIC_SOURCE_CAPABILITY
+        );
+
+        if (Build.current().isSnapshot()) {
+            return Collections.unmodifiableSet(Sets.union(capabilities, snapshotBuildCapabilities()));
+        }
+
+        return capabilities;
+    }
+
+    private static Set<String>  snapshotBuildCapabilities() {
+        return Set.of(KQL_QUERY_SUPPORTED);
+    }
 }
